--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run dev"
   },
   "dependencies": {
-    "core-js": "3.5.0",
     "aos": "3.0.0-beta.6",
+    "core-js": "3.5.0",
     "element-ui": "2.13.0",
     "google-maps": "3.3.0",
+    "googleapis": "^39.2.0",
+    "linebyline": "^1.3.0",
     "nouislider": "14.1.1",
     "v-tooltip": "2.0.2",
     "vue": "2.6.11",
